--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-</head>
-<body>
+	<title> Akash </title>
 
+
+</head>
+
+<body>
+	<h1>My self Akash </h1>
+<p> My full name is Akash Kumar.I am from Sitamarhi,Bihar.Present i live in kolkata pursuing b.tech degree from RCCIIT </p>
+<img src="Akash.jpeg" alt="Akash kumar" style= width:100px;height:150px;>
+<div>
+<a href="https://www.facebook.com/profile.php?id=100026098073865" target="_blank">Fackbook</a>
+<br>
+<a href="https://www.instagram.com/i_m_akashhh/" target="_blank">Instagram</a>
+<br>
+<a href="https://www.linkedin.com/in/akash-kumar-984320197/">linkedin</a>
+</div>
 </body>
 </html>
